--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>5분 단위 플래너</title>
   <style>
     td { white-space: pre-wrap; }
@@ -13,14 +13,14 @@
     th { background: #eee; }
     td { cursor: pointer; }
     .highlight { background: #bbf7d0 !important; }
-    .overlay { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.3); }
-    .modal { display: none; position: fixed; top: 30%; left: 50%; transform: translate(-50%, -30%); background: white; width: 260px; padding: 10px; box-shadow: 0 0 6px rgba(0,0,0,0.2); }
+    .overlay { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.3); z-index: 5; }
+    .modal { display: none; position: fixed; top: 30%; left: 50%; transform: translate(-50%, -30%); background: white; width: 260px; padding: 10px; box-shadow: 0 0 6px rgba(0,0,0,0.2); z-index: 10; }
     .palette { display: flex; gap: 5px; margin: 8px 0; justify-content: center; }
     .color-swatch { width: 20px; height: 20px; border: 1px solid #aaa; cursor: pointer; }
     .color-preview { width: 20px; height: 20px; border: 2px solid black; margin-left: 8px; }
     .modal-buttons { display: flex; flex-direction: column; gap: 4px; margin-top: 8px; }
     .modal-buttons button { padding: 4px 6px; font-size: 12px; }
-    #timePreview { position: absolute; display: none; background: #fff; border: 1px solid #ccc; padding: 2px 6px; font-size: 12px; }
+    #timePreview { position: absolute; display: none; background: #fff; border: 1px solid #ccc; padding: 2px 6px; font-size: 12px; z-index: 15; }
     textarea { width: 100%; height: 40px; resize: vertical; font-size: 12px; }
   </style>
 </head>
@@ -37,7 +37,6 @@
     </thead>
     <tbody id="plannerBody"></tbody>
   </table>
-
   <div class="overlay" id="overlay"></div>
   <div class="modal" id="modal">
     <label for="taskText">할 일</label>
@@ -57,122 +56,94 @@
       <button id="deleteBtn" onclick="removeTask()" style="display:none;">삭제</button>
     </div>
   </div>
-
   <div id="timePreview"></div>
   <script>
     let selectedCells = [];
-    let startCell = null;
-    let isDragging = false;
+    let rangeStart = null;
     let selectedColor = '#fde68a';
-
-    const modal = document.getElementById('modal');
-    const overlay = document.getElementById('overlay');
-    const taskText = document.getElementById('taskText');
-    const deleteBtn = document.getElementById('deleteBtn');
+    const defaultBg = 'rgb(236, 253, 245)';
+    const modal = document.getElementById('modal'), overlay = document.getElementById('overlay');
+    const taskText = document.getElementById('taskText'), deleteBtn = document.getElementById('deleteBtn');
     const timePreview = document.getElementById('timePreview');
 
     function generateTable() {
-      const tbody = document.getElementById('plannerBody');
-      tbody.innerHTML = '';
+      const tbody = document.getElementById('plannerBody'); tbody.innerHTML = '';
       for (let h = 0; h < 24; h++) {
         const row = document.createElement('tr');
-        const th = document.createElement('th');
-        th.textContent = `${String(h).padStart(2,'0')}시`;
-        row.appendChild(th);
+        const th = document.createElement('th'); th.textContent = `${String(h).padStart(2,'0')}시`; row.appendChild(th);
         for (let i = 0; i < 12; i++) {
           const td = document.createElement('td');
           td.dataset.time = `${String(h).padStart(2,'0')}:${String(i*5).padStart(2,'0')}`;
-          td.addEventListener('mousedown', onMouseDown);
-          td.addEventListener('mouseover', onMouseOver);
-          td.addEventListener('mouseup', onMouseUp);
+          td.addEventListener('click', onCellClick);
+          td.addEventListener('mouseover', onCellHover);
           row.appendChild(td);
         }
         tbody.appendChild(row);
       }
     }
 
-    function onMouseDown(e) {
+    function onCellClick(e) {
       const cell = e.currentTarget;
-      const defaultBg = 'rgb(236, 253, 245)'; // #ecfdf5
-      const cellBg = window.getComputedStyle(cell).backgroundColor;
-      if (cellBg !== defaultBg) {
-        // Edit or delete existing block when any cell is clicked
-        const all = Array.from(document.querySelectorAll('td'));
-        let idx = all.indexOf(cell);
-        // find block start
-        while (idx > 0 && window.getComputedStyle(all[idx - 1]).backgroundColor === cellBg) idx--;
-        // find block end
-        let endIdx = idx;
-        while (endIdx + 1 < all.length && window.getComputedStyle(all[endIdx + 1]).backgroundColor === cellBg) endIdx++;
-        selectedCells = all.slice(idx, endIdx + 1);
-        clearSelection();
-        selectedCells.forEach(c => c.classList.add('highlight'));
-        showModal();
-        return;
-      }
-      // New selection
-      isDragging = true;
-      startCell = cell;
-      clearSelection();
-      startCell.classList.add('highlight');
-      selectedCells = [startCell];
-      showPreview(e);
-    }
-
-    function onMouseOver(e) {
-      if (!isDragging) return;
       const all = Array.from(document.querySelectorAll('td'));
-      const i1 = all.indexOf(startCell);
-      const i2 = all.indexOf(e.currentTarget);
+      const bg = window.getComputedStyle(cell).backgroundColor;
+      if (bg !== defaultBg) {
+        // edit existing block
+        let idx = all.indexOf(cell);
+        while (idx > 0 && window.getComputedStyle(all[idx-1]).backgroundColor === bg) idx--;
+        let end = idx; while (end+1 < all.length && window.getComputedStyle(all[end+1]).backgroundColor === bg) end++;
+        selectedCells = all.slice(idx, end+1);
+        clearSelection(); selectedCells.forEach(c => c.classList.add('highlight'));
+        showModal(); return;
+      }
+      if (!rangeStart) {
+        rangeStart = cell;
+        clearSelection(); cell.classList.add('highlight'); selectedCells = [cell];
+      } else {
+        const i1 = all.indexOf(rangeStart), i2 = all.indexOf(cell);
+        const [min, max] = [Math.min(i1,i2), Math.max(i1,i2)];
+        selectedCells = all.slice(min, max+1);
+        clearSelection(); selectedCells.forEach(c => c.classList.add('highlight'));
+        showModal(); rangeStart = null;
+      }
+    }
+
+    function onCellHover(e) {
+      if (!rangeStart) return;
+      const cell = e.currentTarget;
+      const all = Array.from(document.querySelectorAll('td'));
+      const i1 = all.indexOf(rangeStart), i2 = all.indexOf(cell);
       const [min, max] = [Math.min(i1,i2), Math.max(i1,i2)];
-      clearSelection();
       selectedCells = all.slice(min, max+1);
-      selectedCells.forEach(c => c.classList.add('highlight'));
-      showPreview(e);
+      clearSelection(); selectedCells.forEach(c => c.classList.add('highlight'));
+      showPreview(cell);
     }
 
-    function onMouseUp(e) {
-      isDragging = false;
-      timePreview.style.display = 'none';
-      showModal();
-    }
-
-    function showPreview(e) {
+    function showPreview(cell) {
+      const rect = cell.getBoundingClientRect();
       const start = selectedCells[0].dataset.time;
       const mins = selectedCells.length * 5;
       const end = addMinutes(start, mins);
       timePreview.textContent = `${start} ~ ${end} (${mins}분)`;
-      timePreview.style.left = `${e.pageX+10}px`;
-      timePreview.style.top = `${e.pageY+10}px`;
+      timePreview.style.top = `${rect.top}px`;
+      timePreview.style.left = `${rect.right + 5}px`;
       timePreview.style.display = 'block';
-    }
-
-    function addMinutes(time, mins) {
-      const [h, m] = time.split(':').map(Number);
-      const d = new Date();
-      d.setHours(h, m + mins, 0, 0);
-      return `${String(d.getHours()).padStart(2,'0')}:${String(d.getMinutes()).padStart(2,'0')}`;
     }
 
     function clearSelection() {
       document.querySelectorAll('td').forEach(td => td.classList.remove('highlight'));
+      timePreview.style.display = 'none';
     }
 
     function showModal() {
-      modal.style.display = 'block';
-      overlay.style.display = 'block';
+      modal.style.display = 'block'; overlay.style.display = 'block';
       taskText.focus();
-      const title = selectedCells[0].textContent.split('(')[0].trim();
-      taskText.value = title;
+      const title = selectedCells[0].textContent.split('(')[0].trim(); taskText.value = title;
       deleteBtn.style.display = title ? 'inline-block' : 'none';
     }
 
-    function closeModal() {
-      modal.style.display = 'none';
-      overlay.style.display = 'none';
-    }
+    function closeModal() { modal.style.display = 'none'; overlay.style.display = 'none'; }
 
-    document.addEventListener('keydown', e => { if (e.key==='Escape') closeModal(); });
+    document.addEventListener('keydown', e => { if (e.key === 'Escape') closeModal(); });
 
     function applyTask() {
       const text = taskText.value.trim();
@@ -180,57 +151,29 @@
       const mins = selectedCells.length * 5;
       const end = addMinutes(start, mins);
       const full = `${text} (${start} ~ ${end} (${mins}분))`;
-      selectedCells.forEach((c,i) => {
-        if (i===0) {
-          c.textContent = full;
-          c.style.backgroundColor = selectedColor;
-        } else {
-          c.textContent = '';
-          c.style.backgroundColor = selectedColor;
-        }
-      });
+      selectedCells.forEach((c, i) => { c.textContent = i===0 ? full : ''; c.style.backgroundColor = selectedColor; });
       clearSelection();
+      rangeStart = null;  // reset start for mobile selection
       selectedCells = [];
       closeModal();
     }
 
     function removeTask() {
       if (!selectedCells.length) return;
-      const all = Array.from(document.querySelectorAll('td'));
-      const target = selectedCells[0];
-      const blockColor = target.style.backgroundColor;
-      let idx = all.indexOf(target);
-      // find start of block by background color
-      while (idx > 0 && all[idx - 1].style.backgroundColor === blockColor) {
-        idx--;
-      }
-      // clear entire block
-      while (idx < all.length && all[idx].style.backgroundColor === blockColor) {
-        all[idx].textContent = '';
-        all[idx].style.backgroundColor = '#ecfdf5';
-        idx++;
-      }
-      clearSelection();
-      selectedCells = [];
-      closeModal();
+      selectedCells.forEach(c => { c.textContent = ''; c.style.backgroundColor = defaultBg; });
+      clearSelection(); selectedCells = []; closeModal();
     }
 
-    function chooseColor(c) {
-      selectedColor = c;
-      document.getElementById('colorPreview').style.backgroundColor = c;
+    function addMinutes(time, mins) {
+      const [h,m] = time.split(':').map(Number);
+      const d = new Date(); d.setHours(h, m+mins, 0,0);
+      return `${String(d.getHours()).padStart(2,'0')}:${String(d.getMinutes()).padStart(2,'0')}`;
     }
 
-    function clearAll() {
-      document.querySelectorAll('td').forEach(c => {
-        c.textContent = '';
-        c.style.backgroundColor = '#ecfdf5';
-      });
-    }
+    function chooseColor(c) { selectedColor = c; document.getElementById('colorPreview').style.backgroundColor = c; }
+    function clearAll() { document.querySelectorAll('td').forEach(c => { c.textContent=''; c.style.backgroundColor=defaultBg; }); }
 
-    document.addEventListener('DOMContentLoaded', () => {
-      generateTable();
-      chooseColor(selectedColor);
-    });
+    document.addEventListener('DOMContentLoaded', () => { generateTable(); chooseColor(selectedColor); });
   </script>
 </body>
 </html>
