--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>5분 단위 플래너</title>
   <style>
+    .table-container { overflow-x: auto; }
+    td { white-space: pre-wrap; word-break: break-word; }
+    @media (max-width: 600px) {
+      .table-container table { min-width: 720px; }
+      th, td { white-space: nowrap; }
+    }
+    body { font-family: sans-serif; margin: 20px; background: #f9f9f9; }
     td { white-space: pre-wrap; }
     body { font-family: sans-serif; margin: 20px; background: #f9f9f9; }
     h1 { text-align: center; margin-bottom: 10px; }
@@ -27,7 +34,7 @@
 <body>
   <h1>5분 단위 플래너</h1>
   <div style="text-align:center; margin-bottom:10px;"><button onclick="clearAll()">전체 삭제</button></div>
-  <table>
+  <div class="table-container"><table>
     <thead>
       <tr>
         <th>시간</th>
@@ -36,7 +43,7 @@
       </tr>
     </thead>
     <tbody id="plannerBody"></tbody>
-  </table>
+  </table></div>
   <div class="overlay" id="overlay"></div>
   <div class="modal" id="modal">
     <label for="taskText">할 일</label>
